Bug 143032 - CRASH (assertion failed) when typing a format string in DBGUTIL build
Summary: CRASH (assertion failed) when typing a format string in DBGUTIL build
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-24 05:04 UTC by Mike Kaganski
Modified: 2021-06-25 11:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A test document failing in current dbgutil builds (7.40 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-06-24 08:58 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2021-06-24 05:04:15 UTC
It happens in any place where it's possible to use format strings; e.g., in Writer's Date fields. These steps use Calc as an example.

0. Use DBGUTIL build.
1. In a Calc document, open Cell Format dialog.
2. Start typing the format string MMMM""

Assertion is failed as soon as the last doublequote is typed -> crash.
Comment 1 Mike Kaganski 2021-06-24 05:53:45 UTC
https://gerrit.libreoffice.org/c/core/+/117723
Comment 2 Mike Kaganski 2021-06-24 08:58:41 UTC
Created attachment 173143 [details]
A test document failing in current dbgutil builds
Comment 3 Commit Notification 2021-06-25 11:04:53 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9430eef53b89bce2e43258d5c4533d655fa80453

tdf#143032: Check if the literal is empty

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.