tdf#143032: Check if the literal is empty

Change-Id: I19a3b1abbe9cda32e012be23fc98baa20108f532